--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=33060
 DB_DATABASE=audax
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=toor
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
