UPDATE: docker-compose ports

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+## DOCKER
+PHPMYADMIN_LOCAL_PORT=8082
+MYSQL_LOCAL_PORT=33060
+
+## LARAVEL
 APP_NAME="Demo Audax"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Gl9R1uenk30gBWmy20cWg7Zg3Hf00lpugKr1zh293tY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
