--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,7 +1,7 @@
 mysql:
   image: mysql:5.7
   ports:
-    - "33060:3306"
+    - "${MYSQL_LOCAL_PORT}:3306"
   environment:
     - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
   volumes:
@@ -13,7 +13,7 @@ phpmyadmin:
   links:
     - mysql:db
   ports:
-    - "8082:80"
+    - "${PHPMYADMIN_PORT}:80"
   environment:
     - PMA_USER=${DB_USERNAME}
     - PMA_PASSWORD=${DB_PASSWORD}
