UPDATE: env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ## DOCKER
-PHPMYADMIN_LOCAL_PORT="8082"
-MYSQL_LOCAL_PORT="33060"
+PHPMYADMIN_LOCAL_PORT=8082
+MYSQL_LOCAL_PORT=33060
 
 ## LARAVEL
 APP_NAME="Demo Audax"
